# DXFViewer

./: .gitmodules  CMakeLists.txt  README.md
examples/ReadDXF/: dx_data.h  main.cpp
examples/Viewer/: main.cpp
src/App/: Application.cpp  Application.h  DXFViewer.h
src/Core/: Camera.cpp  Camera.h  CameraBase.cpp  DxfImport.h  OpenGLDC.h  OrthoCamera.cpp  OrthoCamera.h  Ray.cpp  Ray.h  TimeStamp.h  dx_data.h  dx_iface.cpp  dx_iface.h
src/Dxf/: Base.h  DxfInterface.h  DxfRW.cpp  DxfRW.h  DxfReader.cpp  DxfReader.h  DxfReaderAscii.cpp  DxfReaderAscii.h  DxfReaderBinary.h  Dxfwriter.h  Header.cpp  Header.h  Table932.h  Table936.h  Table949.h  Table950.h  Tables.h  TextCodec.cpp  TextCodec.h
src/Entity/: Box.h  BoxBasicLighting.h  BoxColor.h  BoxLightingCastersDirectional.h  BoxLightingCastersPoint.h  BoxLightingCastersSpotSoft.h  BoxLightingCastersSpotlightHard.h  BoxLightingMaps.h  BoxLightsMultiple.h  BoxMaterials.h  Circle.h  DepthTesting.h  Entity.h  Ground.h  Line.h  Part.h  Triangle.h
src/Shader/: LightingDiffuse.h  Shader.cpp  ShaderBasicLighting.h  ShaderCircle.h  ShaderCube.h  ShaderCurve.h  ShaderLightingCastersDirectional.h  ShaderLightingCastersPoint.h  ShaderLightingCastersSpotSoft.h  ShaderLightingCastersSpotlightHard.h  ShaderLightingMaps.h  ShaderLightsMultiple.h  ShaderManager.h  ShaderMaterials.h  Shader_P3.h  Shader_P3_C3.h  Shader_P3_C4_T2.h
src/libdxfrw/: CMakeLists.txt  libdxfrw.cpp
src/libdxfrw/intern/: drw_textcodec.cpp
